fix [#36157] Memory Leak in GHOST_DropTargetX11 would leak a little bit of memory for every window created.