intern/ghost/intern/GHOST_DropTargetWin32.h
@@ -152,6 +152,10 @@ private:
 	GHOST_SystemWin32 *m_system;
 	/* Data type of the dragged object */
 	GHOST_TDragnDropTypes m_draggedObjectType;
+
+#ifdef WITH_CXX_GUARDEDALLOC
+	MEM_CXX_CLASS_ALLOC_FUNCS("GHOST:GHOST_DropTargetWin32")
+#endif
 };
 
 #endif  // __GHOST_DROPTARGETWIN32_H__
