intern/ghost/intern/GHOST_DropTargetX11.h
@@ -130,6 +130,10 @@ private:
 
 	/* counter of references to global XDND structures */
 	static int m_refCounter;
+
+#ifdef WITH_CXX_GUARDEDALLOC
+	MEM_CXX_CLASS_ALLOC_FUNCS("GHOST:GHOST_DropTargetX11")
+#endif
 };
 
 #endif  // __GHOST_DROPTARGETX11_H__
